--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
 	"scripts": {
 		"start": "NODE_ENV=production node build/index.js",
 		"start:dev": "NODE_ENV=development nodemon",
-		"watch": "npx nodemon src/index.js",
 		"lint": "npx eslint . --fix",
 		"bcrypt-rounds": "node scripts/bcrypt-rounds.js",
 		"jwt-secret": "node scripts/jwt-secret.js"
@@ -16,9 +15,10 @@
 		"bcrypt": "^5.1.0",
 		"config": "^3.3.9",
 		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"express-file-routing": "^3.0.2",
-		"express-router-filesystem": "^1.1.1",
+		"express-rate-limit": "^6.8.1",
 		"hat": "^0.0.3",
 		"hcaptcha": "^0.1.1",
 		"js-yaml": "^4.1.0",
@@ -33,7 +33,9 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/config": "^3.3.0",
 		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/express-rate-limit": "^6.0.0",
 		"@types/hat": "^0.0.1",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/module-alias": "^2.0.1",
