--- a/package.json
+++ b/package.json
@@ -1,54 +1,57 @@
 {
-  "scripts": {
-    "start": "NODE_ENV=production node build/index.js",
-    "start:dev": "NODE_ENV=development nodemon",
-    "build": "npm run lint && rimraf ./build && npx tsc",
-    "lint": "npx eslint . --fix",
-    "bcrypt-rounds": "node scripts/bcrypt-rounds.js",
-    "jwt-secret": "node scripts/jwt-secret.js"
-  },
-  "_moduleAliases": {
-    "@util": "./build/util",
-    "@middleware": "./build/middleware"
-  },
-  "dependencies": {
-    "age-calculator": "^1.0.0",
-    "bcrypt": "^5.1.0",
-    "config": "^3.3.9",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-file-routing": "^3.0.2",
-    "express-rate-limit": "^6.8.1",
-    "hat": "^0.0.3",
-    "hcaptcha": "^0.1.1",
-    "js-yaml": "^4.1.0",
-    "jsonwebtoken": "^9.0.1",
-    "module-alias": "^2.2.3",
-    "mongodb": "^5.7.0",
-    "nodemailer": "^6.9.4",
-    "prompt-sync": "^4.2.0",
-    "pug": "^3.0.2",
-    "sharp": "^0.32.4"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/config": "^3.3.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/express-rate-limit": "^6.0.0",
-    "@types/hat": "^0.0.1",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/module-alias": "^2.0.1",
-    "@types/node": "^20.4.5",
-    "@types/nodemailer": "^6.4.9",
-    "@types/pug": "^2.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.45.0",
-    "nodemon": "^3.0.1",
-    "rimraf": "^5.0.1",
-    "typescript": "^5.1.6"
-  }
+	"scripts": {
+		"start": "NODE_ENV=production node build/index.js",
+		"start:dev": "NODE_ENV=development nodemon",
+		"build": "npm run lint && rimraf ./build && npx tsc",
+		"lint": "npx eslint . --fix",
+		"bcrypt-rounds": "node scripts/bcrypt-rounds.js",
+		"jwt-secret": "node scripts/jwt-secret.js"
+	},
+	"_moduleAliases": {
+		"@util": "./build/util",
+		"@middleware": "./build/middleware"
+	},
+	"dependencies": {
+		"age-calculator": "^1.0.0",
+		"bcrypt": "^5.1.0",
+		"config": "^3.3.9",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"express-file-routing": "^3.0.2",
+		"express-rate-limit": "^6.8.1",
+		"hat": "^0.0.3",
+		"hcaptcha": "^0.1.1",
+		"js-yaml": "^4.1.0",
+		"jsonwebtoken": "^9.0.1",
+		"module-alias": "^2.2.3",
+		"mongodb": "^5.7.0",
+		"ms": "^2.1.3",
+		"nodemailer": "^6.9.4",
+		"otpauth": "^9.2.2",
+		"prompt-sync": "^4.2.0",
+		"pug": "^3.0.2",
+		"sharp": "^0.32.4"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
+		"@types/config": "^3.3.0",
+		"@types/cookie-parser": "^1.4.3",
+		"@types/cors": "^2.8.13",
+		"@types/express": "^4.17.17",
+		"@types/express-rate-limit": "^6.0.0",
+		"@types/hat": "^0.0.1",
+		"@types/jsonwebtoken": "^9.0.2",
+		"@types/module-alias": "^2.0.1",
+		"@types/ms": "^0.7.31",
+		"@types/node": "^20.4.5",
+		"@types/nodemailer": "^6.4.9",
+		"@types/pug": "^2.0.6",
+		"@typescript-eslint/eslint-plugin": "^6.2.0",
+		"@typescript-eslint/parser": "^6.2.0",
+		"eslint": "^8.45.0",
+		"nodemon": "^3.0.1",
+		"rimraf": "^5.0.1",
+		"typescript": "^5.1.6"
+	}
 }
